welcome.lessons.welcome.bat.bool2.CaughtSpeeding.scala.error
caughtSpeeding:9: error: ';' expected but 'else' found.
  else{
  ^caughtSpeeding:13: error: Unmatched closing brace '}' ignored here
 }
 ^